Fix wps header gap issue

--- a/assets/dev/sass/component/ui.admin.scss
+++ b/assets/dev/sass/component/ui.admin.scss
@@ -137,6 +137,9 @@
 }
 
 .wps-header-banner {
+  transform: translateY(-5px);
+  position: relative;
+  z-index: -1;
   width: 100%;
   max-width: 100%;
   background: url('../images/page-header.svg');
